tests/errors/pat_or_var_incompatible_ty_err/pat_or_var_incompatible_ty_err.c
#error pat_or_var_incompatible_ty_err:10:5 Type mismatch: 'string' <> 'int'. Occurred while unifying 'string -> IntOrString' to 'int -> {?31}@pat_or_var_incompatible_ty_err:10:5'.
